les 6 Наследование шаблонов (Extends)

--- a/hexlet_django_blog/templates/article/index.html
+++ b/hexlet_django_blog/templates/article/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>"Это шаблон index.html для приложения article. 
-        Шаблон находится тут: ~/wrk/hexlet-django-blog/hexlet_django_blog/templates/article+++++++++++++++++++++"</h1>
+        Шаблон находится тут: ~/wrk/hexlet-django-blog/hexlet_django_blog/templates/article!!!!!!!!!!!!!1"</h1>
 </body>
 </html>
