--- a/hexlet_django_blog/templates/about.html
+++ b/hexlet_django_blog/templates/about.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>О блоге</h1>
-    <p>Эксперименты с Django на Хекслете</p>
-    <p>{{ tags|join:', ' }}</p>
+    {% extends "base.html" %}
+
+    {% block title %}Эксперименты с Django на Хекслете{% endblock %}
+
+    {% block content %}
+        <h1>О блоге</h1>
+        <p>Эксперименты с Django на Хекслете</p>
+        <p>{{ tags|join:', ' }}</p>
+    {% endblock %}
 </body>
 </html>
