--- a/hexlet_django_blog/templates/article/index.html
+++ b/hexlet_django_blog/templates/article/index.html
@@ -8,5 +8,16 @@
 <body>
     <h1>"Это шаблон index.html для приложения article. 
         Шаблон находится тут: ~/wrk/hexlet-django-blog/hexlet_django_blog/templates/article!!!!!!!!!!!!!1"</h1>
+
+        {% extends "base.html" %}
+
+        {% block content %}
+            <h1>Список статей</h1>
+            {% for article in articles %}
+                <h2>{{ article.name }}</h2>
+                <div>{{ article.body|slice:":200" }}</div>
+            {% endfor %}
+        {% endblock %}
+        
 </body>
 </html>
